uptade pach work

--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-form/ward-form.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-form/ward-form.component.html
@@ -30,7 +30,7 @@
        
                 <input type="hidden"  formControlName="hospitalId" name="hospitalId" > 
             
-                <input type="hidden"   formControlName="username" name="username"> 
+                <input type="hidden"   formControlName="hospitalName" name="hospitalName"> 
              
         <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">   <button  mat-raised-button color="warn"[mat-dialog-close]>Cancel</button> </div>
