--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-form/medicine-form.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-form/medicine-form.component.html
@@ -36,6 +36,7 @@
         </div>
             
                 <input type="hidden"   formControlName="hospitalName" name="hospitalName"> 
+                <input type="hidden"   formControlName="hospitalID" name="hospitalID"> 
 
                 <div class="row justify-content-between text-left">
                     <div class="form-group col-sm-6 flex-column d-flex">   <button  mat-raised-button color="warn"[mat-dialog-close]>Cancel</button> </div>
