--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.html
@@ -89,6 +89,12 @@
             <mat-icon style="color:green" (click)="onEdit(element)">edit</mat-icon>
           
           </button>
+
+          <button mat-icon-button  matTooltip="Delete">
+       
+            <mat-icon style="color:rgb(255, 0, 0)" (click)="onDelete(element)">delete</mat-icon>
+          
+          </button>
     
         </td>
       </ng-container>
