--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-section-form/ward-section-form.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-section-form/ward-section-form.component.html
@@ -7,7 +7,7 @@
     <form class="form-card"  [formGroup]="service.wardSectionForm" (submit)="onSubmit()" >
         <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex"> 
-                <select formControlName="section" id="section">
+                <select formControlName="section" #change id="section" (change)="onChangeSection(change.value)">
                     <option value="">please select section</option>
                     <option value="A">A</option>
                     <option value="B">B</option>
@@ -20,7 +20,7 @@
                 <span class="help-block" *ngIf="service.wardSectionForm.controls['section'].invalid && service.wardSectionForm.controls['section'].touched">Please Enter Valid section !</span>
             </div>
             <div class="form-group col-sm-6 flex-column d-flex"> 
-                <input type="text" id="bedNumber" formControlName="bedNumber" placeholder="Number of Bed"> 
+                <input type="text" id="bedNumber" (change)="applyFilter($event)" formControlName="bedNumber" placeholder="Number of Bed"> 
                 <span class="help-block" *ngIf="service.wardSectionForm.controls['bedNumber'].invalid && service.wardSectionForm.controls['bedNumber'].touched">Please Enter Valid Number of Bed!</span>
             </div>
         </div>
