--- a/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
@@ -8,12 +8,12 @@
   <a mat-list-item routerLinkActive="list-item-active" *ngIf="role=='hospital' || role=='admin'" routerLink="das/dashboard">
     <mat-icon >dashboard</mat-icon> Dashboard
   </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>person_add</mat-icon> Staff </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"*ngIf="role=='hospital' || role=='admin'"> <mat-icon >bubble_chart</mat-icon>Add Doctor </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward" *ngIf="role=='hospital' || role=='admin' || role=='doctor' || role=='doctor'"> <mat-icon> business</mat-icon> Ward </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/pharmacy" *ngIf="role=='hospital' || role=='admin' || role=='pharmacist'"> <mat-icon>add_to_queue</mat-icon> Pharmacy </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/prescription" *ngIf="role=='doctor'"> <mat-icon>fingerprint</mat-icon> Prescription </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/searchPatient" *ngIf="role=='doctor'"> <mat-icon>search</mat-icon> Prescription </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>person_add</mat-icon> Staff </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"*ngIf="role=='hospital' || role=='admin'"> <mat-icon >bubble_chart</mat-icon>Add Doctor </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward" *ngIf="role=='hospital' || role=='admin' || role=='doctor' || role=='nurse'"> <mat-icon> business</mat-icon> Ward </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/pharmacy" *ngIf="role=='hospital' || role=='admin' || role=='pharmacist'"> <mat-icon>add_to_queue</mat-icon> Pharmacy </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/account" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>group_add</mat-icon>Account</a>
   <a mat-list-item (click)=logout()> <mat-icon>logout</mat-icon> Logout </a>
 </mat-nav-list>
